--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mridang.benziini"
-    android:versionCode="1"
-    android:versionName="0.1" >
+    package="com.lorol.zero"
+    android:versionCode="3"
+    android:versionName="3.1" >
 
     <uses-sdk
         android:minSdkVersion="17"
@@ -16,7 +16,7 @@
         android:label="@string/application_name"
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
         <service
-            android:name="com.mridang.benziini.BenziiniWidget"
+            android:name="com.lorol.zero.ZeroWidget"
             android:icon="@drawable/ic_dashclock"
             android:label="@string/extension_name"
             android:permission="com.google.android.apps.dashclock.permission.READ_EXTENSION_DATA" >
